XWIKI-23728: Use a more recent version of headless Chrome for PDF export * Use a different Docker image * Setup a proxy inside the Docker container running the headless Chrome, in order to overcome Chrome's security restrictions * Upgrade the Chrome DevTools Protocol (CDT) client version in order to be able to communicate with recent versions of Chrome * Enable the creation of PDF outline (bookmarks) * Add PO and extend existing test to verify the generation of PDF outline * Enable the creation of accessible (tagged) PDFs * Fix / Update tests * Make sure Paged.js is executed after we register our custom handlers (strangely, it wasn't the case before...) * Prepare for Paged.js 5.x by restoring the Array prototype (modified by Prototype.js) before running Paged.js
(cherry picked from commit 44c04e68a97238c8e233aaa31a78473370b9c229)
(cherry picked from commit 6c982c67ef3ef7146c100300d459d43b30cd039c)